[package]
name = "plygui-test"
version = "0.1.0"
authors = ["snuk182 <snuk188@gmail.com>"]

[[bin]]
name = "uitest"
path = "src/main.rs"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
plygui = {version = "0.0.1", path = "../plygui", features = ["gtk3"]}

[target.'cfg(target_os = "windows")'.dependencies]
plygui = {version = "0.0.1", path = "../plygui", features = ["win32"]}

[target.'cfg(target_os = "macos")'.dependencies]
plygui = {version = "0.0.1", path = "../plygui", features = ["cocoa"]}
